tests/negative_pomidory/SmokeTest3/NestedSmokeTestFolder/nested_file3.pomidor

!!Used for test_pomidor_run_all_and_nested_dir!!
@Feature CSV_data1
@precond Login
@param delete_cookies, full_screen
@DATA pageObjects/csv_data_source.csv
@url practice_page
@name CSV_Test_case#1
!!Comment first line - First, click on login_field #practice_menu_button page title
First paragraph: type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field, and SSSSSŽtypes <<City of
Birth>> in #name_field and again and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field

!!Used for test_pomidor_run_all_and_nested_dir #2!!
@Feature CSV_data1
@precond Login
@param delete_cookies, full_screen
@DATA pageObjects/csv_data_source.csv
@url practice_page
@name CSV_Test_case#2
!!Comment first line - First, click on login_field #practice_menu_button page title
Second paragraph: type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field, and types <<City of
Birth>> in #name_field and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field